# memory-ledger

./: .dockerignore  .env.example  .gitignore  Dockerfile  NOTICE  README.en.md  README.md  compose.dev.yml  conftest.py  docker-compose.yml  pyproject.toml
api/: Dockerfile  README.md  pyproject.toml
api/src/crm_api/: __init__.py  config.py  conversations.py  db.py  deps.py  main.py  policy.py  schemas.py  seed.py  snapshot.py
api/src/crm_api/extraction/: __init__.py  anthropic_extractor.py  offline.py  prompts.py
api/src/crm_api/responder/: __init__.py  litellm_responder.py  offline.py  prompts.py
api/src/crm_api/routes/: __init__.py  chat.py  conversations.py  health.py  intents.py  people.py
api/src/crm_api/tools/: __init__.py  contacts.py  context.py  registry.py
api/tests/: test_api.py
examples/personal_crm/: README.md  __init__.py  mock_extractor.py  policy.py  responder.py  run_demo.py  snapshot.py  transcript.py
examples/personal_crm/tests/: test_crm_demo.py  test_crm_extractor.py  test_crm_responder.py  test_crm_snapshot.py
src/memory_ledger/: __init__.py  bootstrap.py
src/memory_ledger/application/: __init__.py  agent_loop.py  caching.py  ledger.py
src/memory_ledger/domain/: __init__.py
src/memory_ledger/domain/conversation/: __init__.py  types.py
src/memory_ledger/domain/extraction/: __init__.py  types.py
src/memory_ledger/domain/intents/: __init__.py  normalization.py  types.py  validation.py
src/memory_ledger/domain/policies/: __init__.py  auto_apply.py
src/memory_ledger/domain/snapshot/: __init__.py  rendering.py  sanitization.py
src/memory_ledger/infrastructure/: __init__.py
src/memory_ledger/infrastructure/persistence/: __init__.py  postgres_repository.py  psycopg_adapter.py  schema.py  serialization.py
src/memory_ledger/infrastructure/persistence/sql/: 001_core.sql  002_example_todo.sql  003_entity_registry.sql  004_person.sql
src/memory_ledger/interface/: __init__.py  cli.py
src/memory_ledger/ports/: __init__.py  database.py  extractor.py  repository.py  responder.py
tests/: conftest.py
tests/integration/: test_concurrency.py  test_core_schema_stable.py  test_effective.py  test_effective_unknown_entity.py  test_entity_registry.py  test_expired.py  test_history.py  test_idempotency.py  test_lifecycle.py  test_multitenant.py  test_person_effective.py  test_state_timestamp.py  test_supersede.py
tests/unit/: test_architecture.py
tests/unit/application/: test_agent_loop_offline.py  test_caching.py  test_known_entities_guard.py  test_ledger_with_fake_repo.py
tests/unit/domain/: test_auto_apply.py  test_conversation_types.py  test_extraction_types.py  test_intents.py  test_snapshot.py
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.module.css  App.tsx  main.tsx
web/src/design/: global.css  tokens.css
web/src/features/chat/: ChatPanel.module.css  ChatPanel.tsx  Markdown.module.css  Markdown.tsx  Reasoning.module.css  Reasoning.tsx  Thinking.module.css  Thinking.tsx  ToolStrip.module.css  ToolStrip.tsx
web/src/features/contacts/: ContactEditor.module.css  ContactEditor.tsx  ContactList.module.css  ContactList.tsx  ContactStrip.module.css  ContactStrip.tsx
web/src/features/conversations/: ConversationList.module.css  ConversationList.tsx
web/src/features/ledger/: LedgerTimeline.module.css  LedgerTimeline.tsx
web/src/features/person/: PersonCard.module.css  PersonCard.tsx
web/src/features/timetravel/: TimeScrubber.module.css  TimeScrubber.tsx
web/src/hooks/: useCrm.ts
web/src/lib/: api.ts  format.ts  labels.ts  sse.ts  types.ts
web/src/ui/: Badge.module.css  Badge.tsx  Panel.module.css  Panel.tsx
